--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,22 @@
 {
   "presets": [
-    ["env", {
-      "modules": false,
-      "targets": {
-        "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
-      }
-    }],
-    "stage-2"
+    [
+      "es2015",
+      [
+        "env",
+        {
+          "loose": true,
+          "modules": false
+        },
+        {
+          "targets": {
+            "browsers": ["last 2 versions", "ie >= 9"]
+          }
+        }
+      ]
+    ],
+    "stage-0"
   ],
-  "plugins": ["transform-runtime"],
-  "env": {
-    "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": ["istanbul"]
-    }
-  }
+  "plugins": ["transform-runtime", "transform-vue-jsx"],
+  "comments": false
 }
