--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "license": "ISC",
   "dependencies": {
     "clipboard": "^1.7.1",
+    "es6-promise": "^4.1.1",
     "highlight.js": "^9.12.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
-    "vue-xui": "^0.6.0"
+    "vue-xui": "^0.6.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
